# hs-dpkg-parser

./: drepo.cabal  stack.yaml
app/: Main.hs
other/: nix.lua
src/: Fetcher.hs  Record.hs  Suite.hs  Suite2.hs  System.hs  Types.hs  Utils.hs  Workaround.hs
test/: Packages  Sources  Spec.hs
