name:                drepo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/drepo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Suite Record Workaround Utils Types Fetcher
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , attoparsec
                     , text
                     , zlib
                     , split
                     , filepath
                     , aeson
                     , process
                     , directory
                     , clock
                     , cryptonite
                     , store
                     , terminal-progress-bar
                     , mtl
                     , download-curl
                     , curl
                     , tostring
                     , utf8-string
  default-language:    Haskell2010
executable drepo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , drepo
                     , containers
                     , cmdargs
  default-language:    Haskell2010

test-suite drepo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , drepo
                     , QuickCheck
                     , text
                     , hspec
                     , hspec-attoparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/drepo
